chore: Update license in package.json to Apache-2.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tr-faq",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "private": "false",
   "scripts": {
     "dev": "next --turbopack",
